--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
     <%= link_to root_path, class: "navbar-brand" do %>
-      <%= image_tag "https://raw.githubusercontent.com/Luigi292/BLA-BLA-RADIO/main/app/assets/images/logo.jpg" %>
+      <%= image_tag "https://raw.githubusercontent.com/Luigi292/BLA-BLA-RADIO/main/app/assets/images/blabla_logo.png" %>
     <% end %>
     <%= link_to "Home", root_path, class: "nav-link" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
