--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -102,7 +102,7 @@
     <h2 class="gallery-title">Choose what kind of Rock Star you wanna be today</h2>
     <div class="gallery-items">
       <div class="gallery-item">
-        <img src="https://lh3.googleusercontent.com/spp/AGXu5UkeH5BuL8hFVziQBRspehfTAu5bCF7Vf2HAt5Y57jcDmjTXmSkfToqEmCFeKriHTMxx55L8w3NsyH4vXGQ67wBw13jmsibfZZX5TxPGHCjmLnfcHknTgbgGcT2r9lR-kzcpaBHouKzxbSmhD-jZ3FM4-elROl70NFmAKEz1iM0DhP_D5ew169VrMAnc1o6eUxNCwp8l_A=s512-rw-pd-pc0x00ffffff" alt="Mic Pict">
+        <img src="https://img.freepik.com/free-psd/realistic-microphone-illustration_23-2150689798.jpg?size=338&ext=jpg&ga=GA1.1.1141335507.1719187200&semt=sph" alt="Mic Pict">
       </div>
       <div class="gallery-item">
         <img src="https://www.achamilton.co.uk/Yamaha/Pianos/Pictures/Yamaha_CLP765GP-PE.jpg" alt="Drum Pict">
