Changes for Avatar, Navbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,4 +10,5 @@
 // Your CSS partials
 @import "components/index"; // Import your components styles
 @import "pages/index"; // Import general styles for pages
-@import "pages/signupform"; // Import your custom signup form styles
+@import "pages/signup_page"; // Import your custom signup form styles
+@import "pages/login_page"; // Import your custom login form styles
