--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,12 +1,12 @@
-<!-- app/views/devise/registrations/new.html.erb -->
-
 <div class="container">
   <div class="left-side">
-    <img src="path/to/your/image.jpg" alt="Description of Image">
+      <%= image_tag "https://i.discogs.com/buJIX9aRSNkK7vCcdCsy4SOD5alwRWzI5iL89kQSJXM/rs:fit/g:sm/q:90/h:303/w:303/czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9MLTI1ODc5/LTE1OTQzOTUwNzMt/MzAzNC5qcGVn.jpeg" %>
   </div>
+
   <div class="right-side">
     <h2>Sign up</h2>
 
+<div class="form">
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= f.error_notification %>
 
@@ -18,9 +18,9 @@
 
       <div class="form-actions">
         <%= f.button :submit, "Sign up" %>
+        <p>Already have an account? <%= link_to "Log in", new_session_path(resource_name), class: "login-button" %></p>
       </div>
     <% end %>
 
-    <%= render "devise/shared/links" %>
   </div>
 </div>
