--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -2,15 +2,35 @@
 
 <p>Welcome <%= current_user.first_name %> </p>
 
-<h3>Jam Sessions in Your Location:</h3>
+<h3>Jam Sessions You Created:</h3>
 <ul>
-  <% @jam_sessions.each do |jam_session| %>
-    <li>
-      <strong>Location:</strong> <%= jam_session.location %><br>
-      <strong>Band:</strong> <%= jam_session.band %><br>
-      <strong>Musical Genre:</strong> <%= jam_session.musical_genre %><br>
-      <!-- Add more details as needed -->
-    </li>
+  <% if @created_jam_sessions.present? %>
+    <% @created_jam_sessions.each do |jam_session| %>
+      <li>
+        <strong>Location:</strong> <%= jam_session.location %><br>
+        <strong>Band:</strong> <%= jam_session.band %><br>
+        <strong>Musical Genre:</strong> <%= jam_session.musical_genre %><br>
+        <!-- Add more details as needed -->
+      </li>
+    <% end %>
+  <% else %>
+    <p>No jam sessions created yet.</p>
+  <% end %>
+</ul>
+
+<h3>Jam Sessions You Applied For:</h3>
+<ul>
+  <% if @applied_jam_sessions.present? %>
+    <% @applied_jam_sessions.each do |applied_session| %>
+      <li>
+        <strong>Location:</strong> <%= applied_session.jam_session.location %><br>
+        <strong>Band:</strong> <%= applied_session.jam_session.band %><br>
+        <strong>Musical Genre:</strong> <%= applied_session.jam_session.musical_genre %><br>
+        <!-- Add more details as needed -->
+      </li>
+    <% end %>
+  <% else %>
+    <p>You haven't applied for any jam sessions yet.</p>
   <% end %>
 </ul>
 
